examples/malgo/error/ErrorLiteral.mlg
module ErrorLiteral = {
  main = {
    1;
    'a';
    "hello"
  };
}